<?xml version="1.0"?>
<package format="2">
  <name>graph_slam</name>
  <version>1.0.0</version>
  <description>
    Educational Graph-Based SLAM for ROS 1 (Noetic).
    Implements a complete pose-graph SLAM pipeline from scratch
    with full visualisation of nodes, edges and loop closures.
  </description>

  <maintainer email="zeyad@gmail.com">zeyad</maintainer>
  <license>MIT</license>

  <!-- ── Build dependencies ─────────────────────────────── -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>

  <!-- ── Run dependencies ──────────────────────────────── -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <!-- g2o is a system dependency not in rosdep, installed manually -->
  <exec_depend>libg2o</exec_depend>
</package>
