<?xml version="1.0"?>
<package format="3">
  <name>graph_slam</name>
  <version>1.0.0</version>
  <description>
    Educational Graph-Based SLAM for ROS 2.
    Implements a complete pose-graph SLAM pipeline from scratch
    with full visualisation of nodes, edges and loop closures.
  </description>
  <maintainer email="zeyad@gmail.com">zeyad</maintainer>
  <license>MIT</license>

  <!-- ── Build tool ────────────────────────────────────── -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ── Message generation ────────────────────────────── -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- ── ROS 2 dependencies ────────────────────────────── -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- ── System dependencies ───────────────────────────── -->
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <!-- g2o is installed manually, not in rosdep -->
</package>